...
    <string name="pref_remove_tier_hint_key" translatable="false">remove_tier_hint</string>
    <string name="pref_remove_tier_hint_title">How to remove a tier?</string>
    <!-- endregion HintsFragment -->

    <!-- region DefaultTierListCollectionProvider -->
    <string name="tier_list_animals">Animals</string>
    <string name="tier_list_fast_food">Fast food</string>
    <string name="tier_list_flowers">Flowers</string>
    <string name="tier_list_fruits">Fruits</string>
    <string name="tier_list_musical_instruments">Musical instruments</string>
    <string name="tier_list_mythical_creatures">Mythical creatures</string>
    <string name="tier_list_school_subjects">School subjects</string>
    <string name="tier_list_sports">Sports</string>
    <string name="tier_list_vehicles">Vehicles</string>
    <string name="tier_list_zodiac_signs">Zodiac signs</string>
    <!-- endregion DefaultTierListCollectionProvider -->

    <!-- region HintOverlayView -->
    <string name="btn_close_desc">Close</string>
    <string name="btn_previous_desc">Previous</string>
    <string name="btn_next_desc">Next</string>
...
