<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface">

    <me.khruslan.tierlistmaker.presentation.views.TooltipImageButton
        android:id="@+id/btn_add_new_tier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_add_new_tier_desc"
        android:paddingVertical="@dimen/margin_8"
        android:src="@drawable/ic_add_box"
        app:layout_constraintEnd_toStartOf="@id/btn_add_new_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/color_bottom_bar_button"
        tools:tint="@color/grey800_dark" />

    <me.khruslan.tierlistmaker.presentation.views.TooltipImageButton
        android:id="@+id/btn_add_new_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_add_new_image_desc"
        android:paddingVertical="@dimen/margin_8"
        android:src="@drawable/ic_add_photo_alternate"
        app:layout_constraintEnd_toStartOf="@id/btn_zoom_out"
        app:layout_constraintStart_toEndOf="@id/btn_add_new_tier"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/color_bottom_bar_button"
        tools:tint="@color/grey800_dark" />

    <me.khruslan.tierlistmaker.presentation.views.TooltipImageButton
        android:id="@+id/btn_zoom_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_zoom_out_desc"
        android:paddingVertical="@dimen/margin_8"
        android:src="@drawable/ic_zoom_out"
        app:layout_constraintEnd_toStartOf="@id/btn_zoom_in"
        app:layout_constraintStart_toEndOf="@id/btn_add_new_image"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/color_bottom_bar_button"
        tools:tint="@color/grey800_dark" />

    <me.khruslan.tierlistmaker.presentation.views.TooltipImageButton
        android:id="@+id/btn_zoom_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_zoom_in_desc"
        android:paddingVertical="@dimen/margin_8"
        android:src="@drawable/ic_zoom_in"
        app:layout_constraintEnd_toStartOf="@id/btn_view"
        app:layout_constraintStart_toEndOf="@id/btn_zoom_out"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/color_bottom_bar_button"
        tools:tint="@color/grey800_dark" />

    <me.khruslan.tierlistmaker.presentation.views.TooltipImageButton
        android:id="@+id/btn_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_view_desc"
        android:paddingVertical="@dimen/margin_8"
        android:src="@drawable/ic_open_in_new"
        app:layout_constraintEnd_toEndOf="@id/btn_share"
        app:layout_constraintStart_toEndOf="@id/btn_zoom_in"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/color_bottom_bar_button"
        tools:tint="@color/grey800_dark" />

    <me.khruslan.tierlistmaker.presentation.views.TooltipImageButton
        android:id="@+id/btn_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_share_desc"
        android:paddingVertical="@dimen/margin_8"
        android:src="@drawable/ic_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_view"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/color_bottom_bar_button"
        tools:tint="@color/grey800_dark" />

</androidx.constraintlayout.widget.ConstraintLayout>