<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:iconSpaceReserved="false"
        app:key="@string/pref_app_info_key"
        app:title="@string/pref_app_info_title"
        app:summary="@string/pref_app_info_summary" />

    <Preference
        app:iconSpaceReserved="false"
        app:key="@string/pref_app_version_key"
        app:title="@string/pref_app_version_title" />

</PreferenceScreen>